--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "npm run build && node ./dist/index.js",
     "dev": "tsnd index.ts",
     "build": "tsc"
- },
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -24,7 +24,10 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
+    "@types/restify-errors": "^4.3.4",
     "express": "^4.18.1",
-    "http-status-codes": "^2.2.0"
+    "express-async-errors": "^3.1.1",
+    "http-status-codes": "^2.2.0",
+    "restify-errors": "^8.0.2"
   }
 }
